performance.py upgrade for auto excel writing.

--- a/get_base_data.ipynb
+++ b/get_base_data.ipynb
@@ -10,39 +10,39 @@
      "output_type": "stream",
      "text": [
       "       Unnamed: 0   market             time_kst        open        high  \\\n",
-      "0               0  KRW-BTC  2021-04-01T00:00:00  70913000.0  71975000.0   \n",
-      "1               1  KRW-BTC  2021-04-01T01:00:00  71861000.0  72000000.0   \n",
-      "2               2  KRW-BTC  2021-04-01T02:00:00  71500000.0  71738000.0   \n",
-      "3               3  KRW-BTC  2021-04-01T03:00:00  71636000.0  71672000.0   \n",
-      "4               4  KRW-BTC  2021-04-01T04:00:00  71619000.0  71672000.0   \n",
+      "0               0  KRW-BTC  2020-01-01T00:00:00   8342000.0   8390000.0   \n",
+      "1               1  KRW-BTC  2020-01-01T01:00:00   8309000.0   8344000.0   \n",
+      "2               2  KRW-BTC  2020-01-01T02:00:00   8327000.0   8334000.0   \n",
+      "3               3  KRW-BTC  2020-01-01T03:00:00   8276000.0   8292000.0   \n",
+      "4               4  KRW-BTC  2020-01-01T04:00:00   8278000.0   8297000.0   \n",
       "...           ...      ...                  ...         ...         ...   \n",
-      "29606       29606  KRW-BTC  2024-08-18T11:00:00  82730000.0  83679000.0   \n",
-      "29607       29607  KRW-BTC  2024-08-18T12:00:00  83531000.0  83670000.0   \n",
-      "29608       29608  KRW-BTC  2024-08-18T13:00:00  82739000.0  82991000.0   \n",
-      "29609       29609  KRW-BTC  2024-08-18T14:00:00  82927000.0  83200000.0   \n",
-      "29610       29610  KRW-BTC  2024-08-18T15:00:00  82980000.0  82992000.0   \n",
+      "40730       40730  KRW-BTC  2024-08-26T13:00:00  85659000.0  85750000.0   \n",
+      "40731       40731  KRW-BTC  2024-08-26T14:00:00  85476000.0  85583000.0   \n",
+      "40732       40732  KRW-BTC  2024-08-26T15:00:00  85473000.0  85535000.0   \n",
+      "40733       40733  KRW-BTC  2024-08-26T16:00:00  85112000.0  85329000.0   \n",
+      "40734       40734  KRW-BTC  2024-08-26T17:00:00  85025000.0  85241000.0   \n",
       "\n",
       "              low       close    volume_krw  volume_market  \n",
-      "0      70838000.0  71826000.0  5.065805e+10     708.447441  \n",
-      "1      71250000.0  71445000.0  2.085168e+10     291.088119  \n",
-      "2      71420000.0  71662000.0  9.189578e+09     128.412123  \n",
-      "3      71619000.0  71672000.0  2.445964e+07       0.341378  \n",
-      "4      70770000.0  70910000.0  6.646020e+09      93.397432  \n",
+      "0       8306000.0   8310000.0  1.482165e+09     177.914025  \n",
+      "1       8305000.0   8327000.0  3.220427e+08      38.661104  \n",
+      "2       8260000.0   8274000.0  6.496382e+08      78.341298  \n",
+      "3       8260000.0   8278000.0  4.129822e+08      49.933176  \n",
+      "4       8269000.0   8292000.0  9.605603e+07      11.590286  \n",
       "...           ...         ...           ...            ...  \n",
-      "29606  82730000.0  83528000.0  1.138587e+10     136.821548  \n",
-      "29607  82710000.0  82739000.0  8.606897e+09     103.617611  \n",
-      "29608  82650000.0  82927000.0  4.910657e+09      59.288175  \n",
-      "29609  82850000.0  82980000.0  3.992564e+09      48.084358  \n",
-      "29610  82930000.0  82931000.0  1.241540e+08       1.496592  \n",
+      "40730  85457000.0  85472000.0  5.908320e+09      68.988468  \n",
+      "40731  85330000.0  85473000.0  5.241955e+09      61.336620  \n",
+      "40732  85110000.0  85114000.0  1.040637e+10     121.968312  \n",
+      "40733  85000000.0  85025000.0  1.010743e+10     118.758116  \n",
+      "40734  85009000.0  85041000.0  4.640460e+09      54.503254  \n",
       "\n",
-      "[29611 rows x 9 columns]\n"
+      "[40735 rows x 9 columns]\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"data/total_hours.csv\")\n",
+    "df = pd.read_csv(\"data/total_2_hours.csv\")\n",
     "print(df)"
    ]
   },
@@ -55,14 +55,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/99/rgk848td545d3hdrkgrkw0t40000gn/T/ipykernel_36108/378141607.py:5: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-      "  complete_time_series = pd.date_range(start='2021-04-01 00:00:00', end='2024-08-18 15:00:00', freq='H')\n"
+      "/var/folders/99/rgk848td545d3hdrkgrkw0t40000gn/T/ipykernel_46006/3122377263.py:5: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+      "  complete_time_series = pd.date_range(start='2020-01-01 00:00:00', end='2024-08-26 17:00:00', freq='H')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "DatetimeIndex(['2021-04-19 04:00:00', '2021-06-01 04:00:00',\n",
+       "DatetimeIndex(['2020-01-31 03:00:00', '2020-06-17 03:00:00',\n",
+       "               '2020-06-17 04:00:00', '2020-06-17 05:00:00',\n",
+       "               '2020-09-29 03:00:00', '2021-02-03 05:00:00',\n",
+       "               '2021-02-20 04:00:00', '2021-02-20 05:00:00',\n",
+       "               '2021-02-20 06:00:00', '2021-03-03 04:00:00',\n",
+       "               '2021-03-03 05:00:00', '2021-03-14 04:00:00',\n",
+       "               '2021-03-23 04:00:00', '2021-03-23 05:00:00',\n",
+       "               '2021-04-19 04:00:00', '2021-06-01 04:00:00',\n",
        "               '2021-07-01 01:00:00', '2021-07-01 02:00:00',\n",
        "               '2021-08-17 03:00:00', '2021-10-13 00:00:00',\n",
        "               '2021-11-15 04:00:00', '2022-01-01 03:00:00',\n",
@@ -98,7 +105,7 @@
     "df['time_kst'] = pd.to_datetime(df['time_kst'])\n",
     "\n",
     "# Generate the complete time series\n",
-    "complete_time_series = pd.date_range(start='2021-04-01 00:00:00', end='2024-08-18 15:00:00', freq='H')\n",
+    "complete_time_series = pd.date_range(start='2020-01-01 00:00:00', end='2024-08-26 17:00:00', freq='H')\n",
     "\n",
     "# Find missing time intervals by comparing the two sets\n",
     "missing_times = complete_time_series.difference(df['time_kst'])\n",
@@ -109,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -117,30 +124,30 @@
      "output_type": "stream",
      "text": [
       "    hour          open         close  volume_market\n",
-      "0      0  5.080929e+07  5.081486e+07     300.415345\n",
-      "1      1  5.083852e+07  5.082981e+07     224.563707\n",
-      "2      2  5.085629e+07  5.085627e+07     150.194253\n",
-      "3      3  5.084477e+07  5.085209e+07     130.875980\n",
-      "4      4  5.080315e+07  5.080196e+07     125.623559\n",
-      "5      5  5.079249e+07  5.081716e+07     143.567810\n",
-      "6      6  5.087506e+07  5.090182e+07     171.692611\n",
-      "7      7  5.089165e+07  5.090088e+07     218.332048\n",
-      "8      8  5.090096e+07  5.086612e+07     251.958581\n",
-      "9      9  5.086663e+07  5.087698e+07     417.043760\n",
-      "10    10  5.087699e+07  5.085108e+07     331.371800\n",
-      "11    11  5.085135e+07  5.083224e+07     280.756828\n",
-      "12    12  5.083358e+07  5.080469e+07     262.968519\n",
-      "13    13  5.080504e+07  5.078677e+07     251.253146\n",
-      "14    14  5.078723e+07  5.077902e+07     240.331782\n",
-      "15    15  5.077952e+07  5.079194e+07     255.017814\n",
-      "16    16  5.076645e+07  5.076741e+07     264.993320\n",
-      "17    17  5.076792e+07  5.077470e+07     287.285944\n",
-      "18    18  5.077658e+07  5.077161e+07     260.970992\n",
-      "19    19  5.077242e+07  5.078252e+07     253.798748\n",
-      "20    20  5.078306e+07  5.079829e+07     267.267115\n",
-      "21    21  5.079927e+07  5.081146e+07     337.205385\n",
-      "22    22  5.081189e+07  5.082321e+07     363.031986\n",
-      "23    23  5.082353e+07  5.080799e+07     355.091425\n"
+      "0      0  4.276163e+07  4.277152e+07     302.964061\n",
+      "1      1  4.278408e+07  4.277897e+07     240.035152\n",
+      "2      2  4.278396e+07  4.278322e+07     154.239123\n",
+      "3      3  4.278742e+07  4.279439e+07     126.999127\n",
+      "4      4  4.266834e+07  4.267266e+07     117.849499\n",
+      "5      5  4.272326e+07  4.274687e+07     138.844912\n",
+      "6      6  4.281818e+07  4.284523e+07     165.412457\n",
+      "7      7  4.285364e+07  4.286343e+07     212.535868\n",
+      "8      8  4.286348e+07  4.283576e+07     255.149497\n",
+      "9      9  4.283587e+07  4.284361e+07     417.232635\n",
+      "10    10  4.284372e+07  4.283131e+07     326.313773\n",
+      "11    11  4.283154e+07  4.281063e+07     284.963832\n",
+      "12    12  4.281163e+07  4.278995e+07     271.913533\n",
+      "13    13  4.279022e+07  4.277314e+07     259.748651\n",
+      "14    14  4.277373e+07  4.276702e+07     249.661350\n",
+      "15    15  4.276739e+07  4.278047e+07     262.955547\n",
+      "16    16  4.278081e+07  4.278320e+07     275.319287\n",
+      "17    17  4.278359e+07  4.279067e+07     298.943117\n",
+      "18    18  4.276747e+07  4.276325e+07     281.185451\n",
+      "19    19  4.276392e+07  4.277291e+07     277.614822\n",
+      "20    20  4.277332e+07  4.278530e+07     283.886128\n",
+      "21    21  4.278596e+07  4.280226e+07     354.792763\n",
+      "22    22  4.280263e+07  4.281401e+07     378.089307\n",
+      "23    23  4.281425e+07  4.279749e+07     359.681696\n"
      ]
     }
    ],
@@ -166,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,41 +181,41 @@
      "output_type": "stream",
      "text": [
       "     day_starting_at_4am        open        high         low       close  \\\n",
-      "0    2021-03-31 04:00:00  70913000.0  72000000.0  70838000.0  71672000.0   \n",
-      "1    2021-04-01 04:00:00  71619000.0  73117000.0  70670000.0  72997000.0   \n",
-      "2    2021-04-02 04:00:00  72997000.0  74400000.0  71841000.0  73791000.0   \n",
-      "3    2021-04-03 04:00:00  73790000.0  75703000.0  73100000.0  74815000.0   \n",
-      "4    2021-04-04 04:00:00  74815000.0  75100000.0  71570000.0  73090000.0   \n",
+      "0    2019-12-31 04:00:00   8342000.0   8390000.0   8260000.0   8278000.0   \n",
+      "1    2020-01-01 04:00:00   8278000.0   8387000.0   8269000.0   8342000.0   \n",
+      "2    2020-01-02 04:00:00   8340000.0   8341000.0   8030000.0   8085000.0   \n",
+      "3    2020-01-03 04:00:00   8085000.0   8525000.0   7910000.0   8485000.0   \n",
+      "4    2020-01-04 04:00:00   8486000.0   8520000.0   8382000.0   8429000.0   \n",
       "...                  ...         ...         ...         ...         ...   \n",
-      "1232 2024-08-14 04:00:00  84725000.0  85950000.0  82483000.0  82732000.0   \n",
-      "1233 2024-08-15 04:00:00  82732000.0  83555000.0  81048000.0  81437000.0   \n",
-      "1234 2024-08-16 04:00:00  81436000.0  83040000.0  79500000.0  82912000.0   \n",
-      "1235 2024-08-17 04:00:00  82911000.0  83400000.0  82042000.0  82766000.0   \n",
-      "1236 2024-08-18 04:00:00  82766000.0  83679000.0  82500000.0  82931000.0   \n",
+      "1696 2024-08-22 04:00:00  82390000.0  83600000.0  81280000.0  81962000.0   \n",
+      "1697 2024-08-23 04:00:00  81955000.0  84984000.0  81871000.0  84690000.0   \n",
+      "1698 2024-08-24 04:00:00  84672000.0  86500000.0  84540000.0  85742000.0   \n",
+      "1699 2024-08-25 04:00:00  85742000.0  86199000.0  85300000.0  85990000.0   \n",
+      "1700 2024-08-26 04:00:00  85929000.0  86979000.0  85000000.0  85041000.0   \n",
       "\n",
       "        volume_krw  volume_market  \n",
-      "0     8.072377e+10    1128.289061  \n",
-      "1     6.635804e+11    9202.724442  \n",
-      "2     6.514828e+11    8859.982312  \n",
-      "3     5.678623e+11    7604.545110  \n",
-      "4     6.160404e+11    8423.984650  \n",
+      "0     2.866828e+09     344.849603  \n",
+      "1     8.275045e+09     993.684539  \n",
+      "2     1.495244e+10    1822.111090  \n",
+      "3     4.902840e+10    5904.063410  \n",
+      "4     1.778679e+10    2105.758057  \n",
       "...            ...            ...  \n",
-      "1232  3.119777e+11    3703.563056  \n",
-      "1233  2.546273e+11    3093.291193  \n",
-      "1234  2.868403e+11    3534.627568  \n",
-      "1235  9.552768e+10    1156.014190  \n",
-      "1236  4.892868e+10     589.698190  \n",
+      "1696  2.422034e+11    2932.662045  \n",
+      "1697  2.671331e+11    3213.124045  \n",
+      "1698  2.942932e+11    3432.962091  \n",
+      "1699  1.217810e+11    1421.137462  \n",
+      "1700  1.326626e+11    1545.794600  \n",
       "\n",
-      "[1237 rows x 7 columns]\n"
+      "[1701 rows x 7 columns]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/99/rgk848td545d3hdrkgrkw0t40000gn/T/ipykernel_36108/2786019940.py:6: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+      "/var/folders/99/rgk848td545d3hdrkgrkw0t40000gn/T/ipykernel_46006/2786019940.py:6: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
       "  daily_df = df.resample('24H', offset='4H', origin='start').agg({\n",
-      "/var/folders/99/rgk848td545d3hdrkgrkw0t40000gn/T/ipykernel_36108/2786019940.py:6: FutureWarning: 'H' is deprecated and will be removed in a future version. Please use 'h' instead of 'H'.\n",
+      "/var/folders/99/rgk848td545d3hdrkgrkw0t40000gn/T/ipykernel_46006/2786019940.py:6: FutureWarning: 'H' is deprecated and will be removed in a future version. Please use 'h' instead of 'H'.\n",
       "  daily_df = df.resample('24H', offset='4H', origin='start').agg({\n"
      ]
     }
@@ -237,11 +244,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "daily_df.to_csv(\"data/total_4am.csv\")"
+    "daily_df.to_csv(\"data/total_2_4am.csv\")"
    ]
   }
  ],
