--- a/strategies/hashrate/hashrate.ipynb
+++ b/strategies/hashrate/hashrate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,8 @@
     "df.to_csv(f\"../../results/hashrate/3060_basic.csv\")\n",
     "\n",
     "# Get performance metrics and plot the results\n",
-    "get_performance(df=df, title=f\"3060_basic\")\n"
+    "excel_path = \"../../results/results.xlsx\"\n",
+    "get_performance(df=df, title=f\"3060_basic\", add_to_excel=True, file_path=excel_path)\n"
    ]
   }
  ],
