--- a/strategies/hashrate/hashrate_cut_entry.ipynb
+++ b/strategies/hashrate/hashrate_cut_entry.ipynb
@@ -27,7 +27,7 @@
      "output_type": "stream",
      "text": [
       "======Investment Summary======\n",
-      "Strategy        : 3060_cut_entry5\n",
+      "Strategy        : 3060_cut_entry5%\n",
       "total_return    : 7.21\n",
       "cagr            : 2.32\n",
       "mdd             : 44.46\n",
@@ -174,7 +174,8 @@
     "df.to_csv(f\"../../results/hashrate/3060_basic_cut_entry5.csv\")\n",
     "\n",
     "# Get performance metrics and plot the results\n",
-    "get_performance(df=df, title=f\"3060_cut_entry5\")\n"
+    "excel_path = \"../../results/results.xlsx\"\n",
+    "get_performance(df=df, title=f\"3060_cut_entry5%\", add_to_excel=True, file_path=excel_path)\n"
    ]
   }
  ],
