--- a/strategies/hashrate/hashrate_cut_highest.ipynb
+++ b/strategies/hashrate/hashrate_cut_highest.ipynb
@@ -27,7 +27,7 @@
      "output_type": "stream",
      "text": [
       "======Investment Summary======\n",
-      "Strategy        : 3060_cut_highest5\n",
+      "Strategy        : 3060_cut_highest5%\n",
       "total_return    : -4.82\n",
       "cagr            : -1.62\n",
       "mdd             : 18.15\n",
@@ -174,7 +174,8 @@
     "df.to_csv(f\"../../results/hashrate/3060_basic_cut_highest5.csv\")\n",
     "\n",
     "# Get performance metrics and plot the results\n",
-    "get_performance(df=df, title=f\"3060_cut_highest5\")\n"
+    "excel_path = \"../../results/results.xlsx\"\n",
+    "get_performance(df=df, title=f\"3060_cut_highest5%\", add_to_excel=True, file_path=excel_path)\n"
    ]
   }
  ],
