--- a/strategies/ma/sma_all.ipynb
+++ b/strategies/ma/sma_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,12 @@
     "\n",
     "        # Implement RSI strategy for long positions only\n",
     "        df['signal'] = 0  # Default to no position\n",
-    "        for i in range(200, len(df)):\n",
+    "        for i in range(interval, len(df)):\n",
     "            # Buy condition\n",
-    "            if df['close'].iloc[i] >= df[f'{interval}_ma'].iloc[i]:\n",
+    "            if df.loc[i, 'close'] >= df.loc[i, f'{interval}_ma'] and df.loc[i-1, 'close'] < df.loc[i-1, f'{interval}_ma']:\n",
     "                df.loc[i, 'signal'] = 1\n",
     "            # Sell condition\n",
-    "            elif df['close'].iloc[i] < df[f'{interval}_ma'].iloc[i]:\n",
+    "            elif df.loc[i, 'close'] < df.loc[i, f'{interval}_ma'] and df.loc[i-1, 'close'] >= df.loc[i-1, f'{interval}_ma']:\n",
     "                df.loc[i, 'signal'] = -1\n",
     "\n",
     "        # Manage positions\n",
@@ -50,26 +50,46 @@
     "        holding_position = False\n",
     "\n",
     "        for i in range(1, len(df)):\n",
-    "            if df['signal'].iloc[i] == 1 and not holding_position:\n",
+    "            if df.loc[i, 'signal'] == 1 and not holding_position:\n",
     "                df.loc[i, 'position'] = 1\n",
     "                holding_position = True\n",
-    "            elif df['signal'].iloc[i] == -1 and holding_position:\n",
+    "            elif df.loc[i, 'signal'] == -1 and holding_position:\n",
     "                df.loc[i, 'position'] = 0\n",
     "                holding_position = False\n",
     "            else:\n",
-    "                df.loc[i, 'position'] = df['position'].iloc[i-1]\n",
+    "                df.loc[i, 'position'] = df.loc[i-1, 'position']\n",
     "\n",
     "        # Calculate the strategy returns (only when in a long position)\n",
     "        df['strategy_returns'] = df['position'].shift(1) * df['close'].pct_change()\n",
+    "        df['strategy_returns2'] = df['strategy_returns']\n",
+    "\n",
+    "        for i in range(1, len(df)):\n",
+    "            buy_price = df.loc[i-1, \"close\"]\n",
+    "            buy_price_copy = buy_price\n",
+    "            sell_price = df.loc[i, \"close\"]\n",
+    "            sell_price_copy = sell_price\n",
+    "            if df.loc[i-1, 'position'] == 1 and df.loc[i-1, 'signal'] == 1:\n",
+    "                # df.loc[i, 'strategy_returns2'] = (df.loc[i,'position'])/(df.loc[i-1, 'position'] * 1.002) -1\n",
+    "                buy_price = df.loc[i-1, \"close\"] * 1.002\n",
+    "            if df.loc[i, 'position'] == 0 and df.loc[i-1, 'position'] != 0:\n",
+    "                # df.loc[i, 'strategy_returns2'] = (df.loc[i,'position'] * 0.998)/(df.loc[i-1, 'position']) -1\n",
+    "                sell_price = df.loc[i, \"close\"] * 0.998\n",
+    "            \n",
+    "            if buy_price == buy_price_copy and sell_price == sell_price_copy:\n",
+    "                continue\n",
+    "\n",
+    "\n",
+    "            df.loc[i, \"strategy_returns2\"] = sell_price/buy_price - 1\n",
     "\n",
     "        # Calculate the cumulative returns\n",
     "        df['cumulative_returns'] = (1 + df['strategy_returns']).cumprod()\n",
+    "        df['cumulative_returns2'] = (1 + df['strategy_returns2']).cumprod()\n",
     "\n",
     "        # Calculate the benchmark cumulative returns (buy and hold strategy)\n",
     "        df['benchmark_returns'] = (1 + df['close'].pct_change()).cumprod()\n",
     "\n",
     "        # Save the results to a CSV file\n",
-    "        df.to_csv(f\"../../results/ma/ma{(interval)}.csv\")\n",
+    "        # df.to_csv(f\"../../results/ma/ma{(interval)}.csv\")\n",
     "\n",
     "        # Get performance metrics and plot the results\n",
     "        get_performance(df=df, title=f\"ma_{interval}\")\n",
@@ -80,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -89,52 +109,73 @@
      "text": [
       "======Investment Summary======\n",
       "Strategy        : ma_5\n",
-      "total_return    : 150.28\n",
-      "cagr            : 38.11\n",
+      "total_return    : 284.08\n",
+      "cagr            : 48.99\n",
       "mdd             : 44.87\n",
-      "investing_days  : 1037\n",
+      "total_return_w_fee : 112.48\n",
+      "cagr_w_fee      : 25.02\n",
+      "mdd_w_fee       : 55.89\n",
+      "investing_days  : 1232\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_10\n",
-      "total_return    : 87.0\n",
-      "cagr            : 24.65\n",
+      "total_return    : 187.53\n",
+      "cagr            : 37.63\n",
       "mdd             : 38.32\n",
-      "investing_days  : 1037\n",
+      "total_return_w_fee : 99.0\n",
+      "cagr_w_fee      : 23.13\n",
+      "mdd_w_fee       : 46.48\n",
+      "investing_days  : 1207\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_20\n",
-      "total_return    : 104.39\n",
-      "cagr            : 28.61\n",
+      "total_return    : 171.94\n",
+      "cagr            : 35.43\n",
       "mdd             : 43.81\n",
-      "investing_days  : 1037\n",
+      "total_return_w_fee : 113.92\n",
+      "cagr_w_fee      : 25.93\n",
+      "mdd_w_fee       : 49.87\n",
+      "investing_days  : 1204\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_50\n",
-      "total_return    : 109.17\n",
-      "cagr            : 29.66\n",
+      "total_return    : 269.83\n",
+      "cagr            : 53.09\n",
       "mdd             : 42.29\n",
-      "investing_days  : 1037\n",
+      "total_return_w_fee : 234.64\n",
+      "cagr_w_fee      : 48.18\n",
+      "mdd_w_fee       : 45.33\n",
+      "investing_days  : 1121\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_90\n",
-      "total_return    : 56.29\n",
-      "cagr            : 17.02\n",
+      "total_return    : 134.5\n",
+      "cagr            : 32.08\n",
       "mdd             : 44.25\n",
-      "investing_days  : 1037\n",
+      "total_return_w_fee : 112.19\n",
+      "cagr_w_fee      : 27.84\n",
+      "mdd_w_fee       : 46.11\n",
+      "investing_days  : 1118\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_120\n",
-      "total_return    : 66.8\n",
-      "cagr            : 19.73\n",
+      "total_return    : 147.43\n",
+      "cagr            : 34.81\n",
       "mdd             : 42.49\n",
-      "investing_days  : 1037\n",
+      "total_return_w_fee : 130.24\n",
+      "cagr_w_fee      : 31.65\n",
+      "mdd_w_fee       : 44.19\n",
+      "investing_days  : 1107\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_200\n",
-      "total_return    : 100.91\n",
-      "cagr            : 27.83\n",
-      "mdd             : 29.39\n",
-      "investing_days  : 1037\n",
+      "total_return    : 162.81\n",
+      "cagr            : 84.27\n",
+      "mdd             : 22.45\n",
+      "total_return_w_fee : 155.56\n",
+      "cagr_w_fee      : 81.04\n",
+      "mdd_w_fee       : 22.6\n",
+      "investing_days  : 577\n",
       "==============================\n"
      ]
     }
