--- a/strategies/ma/sma_all_cut_highest.ipynb
+++ b/strategies/ma/sma_all_cut_highest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,12 @@
     "\n",
     "        # Implement RSI strategy for long positions only\n",
     "        df['signal'] = 0  # Default to no position\n",
-    "        for i in range(200, len(df)):\n",
+    "        for i in range(interval, len(df)):\n",
     "            # Buy condition\n",
-    "            if df['close'].iloc[i] >= df[f'{interval}_ma'].iloc[i] and df['close'].iloc[i-1] < df[f'{interval}_ma'].iloc[i-1]:\n",
+    "            if df.loc[i, 'close'] >= df.loc[i, f'{interval}_ma'] and df.loc[i-1, 'close'] < df.loc[i-1, f'{interval}_ma']:\n",
     "                df.loc[i, 'signal'] = 1\n",
     "            # Sell condition\n",
-    "            elif df['close'].iloc[i] <= df[f'{interval}_ma'].iloc[i] and df['close'].iloc[i-1] > df[f'{interval}_ma'].iloc[i-1]:\n",
+    "            elif df.loc[i, 'close'] < df.loc[i, f'{interval}_ma'] and df.loc[i-1, 'close'] >= df.loc[i-1, f'{interval}_ma']:\n",
     "                df.loc[i, 'signal'] = -1\n",
     "\n",
     "        # Manage positions with stop loss, take profit, and sell signal\n",
@@ -123,7 +123,8 @@
     "        df.to_csv(f\"../../results/ma/ma{(interval)}_cut_highest.csv\")\n",
     "\n",
     "        # Get performance metrics and plot the results\n",
-    "        get_performance(df=df, title=f\"ma_{interval}_cut_highest\")\n",
+    "        excel_path = \"../../results/results.xlsx\"\n",
+    "        get_performance(df=df, title=f\"ma_{interval}_cut_highest5%\", add_to_excel=True, file_path=excel_path)\n",
     "        # draw_graph(df=df)\n",
     "\n",
     "        \n",
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,67 +141,67 @@
      "output_type": "stream",
      "text": [
       "======Investment Summary======\n",
-      "Strategy        : ma_5_cut_highest\n",
-      "total_return    : 143.93\n",
-      "cagr            : 37.2\n",
+      "Strategy        : ma_5_cut_highest5%\n",
+      "total_return    : 284.08\n",
+      "cagr            : 48.99\n",
       "mdd             : 44.87\n",
-      "total_return_w_fee : 47.36\n",
-      "cagr_w_fee      : 14.74\n",
-      "mdd_w_fee       : 55.76\n",
-      "investing_days  : 1029\n",
+      "total_return_w_fee : 112.48\n",
+      "cagr_w_fee      : 25.02\n",
+      "mdd_w_fee       : 55.89\n",
+      "investing_days  : 1232\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : ma_10_cut_highest\n",
-      "total_return    : 103.48\n",
-      "cagr            : 28.66\n",
-      "mdd             : 32.64\n",
-      "total_return_w_fee : 49.54\n",
-      "cagr_w_fee      : 15.34\n",
-      "mdd_w_fee       : 41.09\n",
-      "investing_days  : 1029\n",
+      "Strategy        : ma_10_cut_highest5%\n",
+      "total_return    : 211.81\n",
+      "cagr            : 41.04\n",
+      "mdd             : 33.45\n",
+      "total_return_w_fee : 115.81\n",
+      "cagr_w_fee      : 26.19\n",
+      "mdd_w_fee       : 42.26\n",
+      "investing_days  : 1207\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : ma_20_cut_highest\n",
-      "total_return    : 159.16\n",
-      "cagr            : 40.37\n",
-      "mdd             : 29.0\n",
-      "total_return_w_fee : 112.19\n",
-      "cagr_w_fee      : 30.72\n",
-      "mdd_w_fee       : 36.15\n",
-      "investing_days  : 1025\n",
+      "Strategy        : ma_20_cut_highest5%\n",
+      "total_return    : 176.38\n",
+      "cagr            : 36.1\n",
+      "mdd             : 30.66\n",
+      "total_return_w_fee : 117.41\n",
+      "cagr_w_fee      : 26.55\n",
+      "mdd_w_fee       : 38.15\n",
+      "investing_days  : 1204\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : ma_50_cut_highest\n",
-      "total_return    : 156.02\n",
-      "cagr            : 40.79\n",
-      "mdd             : 24.53\n",
-      "total_return_w_fee : 133.52\n",
-      "cagr_w_fee      : 36.16\n",
-      "mdd_w_fee       : 27.39\n",
-      "investing_days  : 1003\n",
+      "Strategy        : ma_50_cut_highest5%\n",
+      "total_return    : 270.26\n",
+      "cagr            : 53.15\n",
+      "mdd             : 29.42\n",
+      "total_return_w_fee : 235.02\n",
+      "cagr_w_fee      : 48.24\n",
+      "mdd_w_fee       : 33.13\n",
+      "investing_days  : 1121\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : ma_90_cut_highest\n",
-      "total_return    : 93.38\n",
-      "cagr            : 31.42\n",
+      "Strategy        : ma_90_cut_highest5%\n",
+      "total_return    : 113.84\n",
+      "cagr            : 28.16\n",
       "mdd             : 28.16\n",
-      "total_return_w_fee : 77.09\n",
-      "cagr_w_fee      : 26.72\n",
+      "total_return_w_fee : 93.49\n",
+      "cagr_w_fee      : 24.05\n",
       "mdd_w_fee       : 30.29\n",
-      "investing_days  : 881\n",
+      "investing_days  : 1118\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : ma_120_cut_highest\n",
-      "total_return    : 19.46\n",
-      "cagr            : 7.67\n",
-      "mdd             : 24.37\n",
-      "total_return_w_fee : 11.61\n",
-      "cagr_w_fee      : 4.67\n",
-      "mdd_w_fee       : 26.31\n",
-      "investing_days  : 878\n",
+      "Strategy        : ma_120_cut_highest5%\n",
+      "total_return    : 30.59\n",
+      "cagr            : 9.2\n",
+      "mdd             : 25.56\n",
+      "total_return_w_fee : 21.52\n",
+      "cagr_w_fee      : 6.64\n",
+      "mdd_w_fee       : 27.76\n",
+      "investing_days  : 1107\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : ma_200_cut_highest\n",
+      "Strategy        : ma_200_cut_highest5%\n",
       "total_return    : 50.3\n",
       "cagr            : 29.4\n",
       "mdd             : 13.38\n",
