--- a/strategies/momentum/simple_mmt_all_cut_entry.ipynb
+++ b/strategies/momentum/simple_mmt_all_cut_entry.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,8 @@
     "        df.to_csv(f\"../../results/momentum/simple_mmt_{(momentum)}_cut_entry.csv\")\n",
     "\n",
     "        # Get performance metrics and plot the results\n",
-    "        get_performance(df=df, title=f\"simple_mmt_{momentum}_cut_entry\")\n",
+    "        excel_path = \"../../results/results.xlsx\"\n",
+    "        get_performance(df=df, title=f\"simple_mmt_{momentum}_cut_entry5%\", add_to_excel=True, file_path=excel_path)\n",
     "        # draw_graph(df=df)\n",
     "\n",
     "        \n",
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +180,7 @@
      "output_type": "stream",
      "text": [
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_30_cut_entry\n",
+      "Strategy        : simple_mmt_30_cut_entry5%\n",
       "total_return    : 133.71\n",
       "cagr            : 36.62\n",
       "mdd             : 21.81\n",
@@ -189,7 +190,7 @@
       "investing_days  : 993\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_60_cut_entry\n",
+      "Strategy        : simple_mmt_60_cut_entry5%\n",
       "total_return    : 85.62\n",
       "cagr            : 28.73\n",
       "mdd             : 33.5\n",
@@ -199,7 +200,7 @@
       "investing_days  : 894\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_90_cut_entry\n",
+      "Strategy        : simple_mmt_90_cut_entry5%\n",
       "total_return    : 59.38\n",
       "cagr            : 21.62\n",
       "mdd             : 36.12\n",
@@ -209,7 +210,7 @@
       "investing_days  : 869\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_120_cut_entry\n",
+      "Strategy        : simple_mmt_120_cut_entry5%\n",
       "total_return    : 82.31\n",
       "cagr            : 38.37\n",
       "mdd             : 21.92\n",
@@ -219,7 +220,7 @@
       "investing_days  : 675\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_150_cut_entry\n",
+      "Strategy        : simple_mmt_150_cut_entry5%\n",
       "total_return    : 180.26\n",
       "cagr            : 50.44\n",
       "mdd             : 23.05\n",
@@ -229,7 +230,7 @@
       "investing_days  : 921\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_180_cut_entry\n",
+      "Strategy        : simple_mmt_180_cut_entry5%\n",
       "total_return    : 123.79\n",
       "cagr            : 36.91\n",
       "mdd             : 26.56\n",
