--- a/strategies/vb/vb_ma_all.ipynb
+++ b/strategies/vb/vb_ma_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +62,15 @@
     "    df.to_csv(f\"../../results/volatilitybreakout/volatility_breakout_basic_{k}_{ma}.csv\")\n",
     "\n",
     "    # Get performance metrics and plot the results\n",
-    "    get_performance(df=df, title=f\"Volatility Breakout_{k}_{ma}\")\n",
+    "    excel_path = \"../../results/results.xlsx\"\n",
+    "    get_performance(df=df, title=f\"Volatility Breakout_{k}_{ma}\",add_to_excel=True, file_path=excel_path)\n",
     "\n",
     "    df = original_df.copy()  # Create a fresh copy for each interval\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
