--- a/strategies/vb/vb_ma_not_daily_highest copy.ipynb
+++ b/strategies/vb/vb_ma_not_daily_highest copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,14 +123,15 @@
     "    df.to_csv(f\"../../results/volatilitybreakout/volatility_breakout_cut_highest_{k}_{ma}.csv\")\n",
     "\n",
     "    # Get performance metrics and plot the results\n",
-    "    get_performance(df=df, title=f\"Volatility Breakout_cut_highest_{k}_{ma}\")\n",
+    "    excel_path = \"../../results/results.xlsx\"\n",
+    "    get_performance(df=df, title=f\"Volatility Breakout_{k}_{ma}cut_highest5%\", add_to_excel=True, file_path=excel_path)\n",
     "\n",
     "    df = original_df.copy()  # Create a fresh copy for each interval\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,100 +139,250 @@
      "output_type": "stream",
      "text": [
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.1\n",
-      "total_return    : -4.17\n",
-      "cagr            : -1.25\n",
-      "mdd             : 78.16\n",
-      "total_return_w_fee : 23.76\n",
-      "cagr_w_fee      : 6.5\n",
-      "mdd_w_fee       : 73.45\n",
-      "investing_days  : 1236\n",
+      "Strategy        : Volatility Breakout_0.3_5cut_highest5%\n",
+      "total_return    : 81.62\n",
+      "cagr            : 19.36\n",
+      "mdd             : 63.9\n",
+      "total_return_w_fee : 75.6\n",
+      "cagr_w_fee      : 18.17\n",
+      "mdd_w_fee       : 64.72\n",
+      "investing_days  : 1231\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.2\n",
-      "total_return    : 89.02\n",
-      "cagr            : 20.69\n",
-      "mdd             : 68.5\n",
-      "total_return_w_fee : 71.2\n",
-      "cagr_w_fee      : 17.21\n",
-      "mdd_w_fee       : 72.38\n",
-      "investing_days  : 1236\n",
+      "Strategy        : Volatility Breakout_0.3_10cut_highest5%\n",
+      "total_return    : 122.63\n",
+      "cagr            : 26.86\n",
+      "mdd             : 63.53\n",
+      "total_return_w_fee : 105.84\n",
+      "cagr_w_fee      : 23.93\n",
+      "mdd_w_fee       : 64.91\n",
+      "investing_days  : 1228\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.3\n",
-      "total_return    : 36.38\n",
-      "cagr            : 9.59\n",
-      "mdd             : 70.06\n",
-      "total_return_w_fee : 54.92\n",
-      "cagr_w_fee      : 13.8\n",
-      "mdd_w_fee       : 69.77\n",
-      "investing_days  : 1236\n",
+      "Strategy        : Volatility Breakout_0.3_20cut_highest5%\n",
+      "total_return    : 89.24\n",
+      "cagr            : 21.37\n",
+      "mdd             : 63.31\n",
+      "total_return_w_fee : 104.71\n",
+      "cagr_w_fee      : 24.3\n",
+      "mdd_w_fee       : 63.58\n",
+      "investing_days  : 1202\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.4\n",
-      "total_return    : 38.39\n",
-      "cagr            : 10.07\n",
-      "mdd             : 68.79\n",
-      "total_return_w_fee : 44.01\n",
-      "cagr_w_fee      : 11.37\n",
-      "mdd_w_fee       : 69.44\n",
-      "investing_days  : 1236\n",
+      "Strategy        : Volatility Breakout_0.3_50cut_highest5%\n",
+      "total_return    : 107.85\n",
+      "cagr            : 26.93\n",
+      "mdd             : 65.66\n",
+      "total_return_w_fee : 130.5\n",
+      "cagr_w_fee      : 31.28\n",
+      "mdd_w_fee       : 66.74\n",
+      "investing_days  : 1120\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.5\n",
-      "total_return    : 35.36\n",
-      "cagr            : 9.35\n",
-      "mdd             : 68.97\n",
-      "total_return_w_fee : 37.3\n",
-      "cagr_w_fee      : 9.81\n",
-      "mdd_w_fee       : 70.02\n",
-      "investing_days  : 1236\n",
+      "Strategy        : Volatility Breakout_0.3_120cut_highest5%\n",
+      "total_return    : 143.02\n",
+      "cagr            : 34.05\n",
+      "mdd             : 50.42\n",
+      "total_return_w_fee : 151.87\n",
+      "cagr_w_fee      : 35.64\n",
+      "mdd_w_fee       : 50.25\n",
+      "investing_days  : 1106\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.6\n",
-      "total_return    : 64.72\n",
-      "cagr            : 15.88\n",
-      "mdd             : 67.77\n",
-      "total_return_w_fee : 59.28\n",
-      "cagr_w_fee      : 14.74\n",
-      "mdd_w_fee       : 69.31\n",
-      "investing_days  : 1236\n",
+      "Strategy        : Volatility Breakout_0.3_200cut_highest5%\n",
+      "total_return    : 86.19\n",
+      "cagr            : 24.48\n",
+      "mdd             : 43.13\n",
+      "total_return_w_fee : 108.01\n",
+      "cagr_w_fee      : 29.44\n",
+      "mdd_w_fee       : 37.29\n",
+      "investing_days  : 1036\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.7\n",
-      "total_return    : 69.82\n",
-      "cagr            : 16.93\n",
-      "mdd             : 69.56\n",
-      "total_return_w_fee : 49.48\n",
-      "cagr_w_fee      : 12.61\n",
-      "mdd_w_fee       : 72.1\n",
-      "investing_days  : 1236\n",
+      "Strategy        : Volatility Breakout_0.5_5cut_highest5%\n",
+      "total_return    : 113.05\n",
+      "cagr            : 25.16\n",
+      "mdd             : 64.67\n",
+      "total_return_w_fee : 86.19\n",
+      "cagr_w_fee      : 20.26\n",
+      "mdd_w_fee       : 65.21\n",
+      "investing_days  : 1230\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.8\n",
-      "total_return    : 77.08\n",
-      "cagr            : 18.38\n",
-      "mdd             : 70.25\n",
-      "total_return_w_fee : 59.43\n",
-      "cagr_w_fee      : 14.77\n",
-      "mdd_w_fee       : 72.24\n",
-      "investing_days  : 1236\n",
+      "Strategy        : Volatility Breakout_0.5_10cut_highest5%\n",
+      "total_return    : 114.4\n",
+      "cagr            : 25.47\n",
+      "mdd             : 63.69\n",
+      "total_return_w_fee : 107.86\n",
+      "cagr_w_fee      : 24.32\n",
+      "mdd_w_fee       : 65.32\n",
+      "investing_days  : 1227\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.9\n",
-      "total_return    : 60.4\n",
-      "cagr            : 14.97\n",
-      "mdd             : 70.7\n",
-      "total_return_w_fee : 44.36\n",
-      "cagr_w_fee      : 11.45\n",
-      "mdd_w_fee       : 73.13\n",
-      "investing_days  : 1236\n",
+      "Strategy        : Volatility Breakout_0.5_20cut_highest5%\n",
+      "total_return    : 103.83\n",
+      "cagr            : 24.14\n",
+      "mdd             : 61.85\n",
+      "total_return_w_fee : 115.48\n",
+      "cagr_w_fee      : 26.25\n",
+      "mdd_w_fee       : 63.03\n",
+      "investing_days  : 1202\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.5_50cut_highest5%\n",
+      "total_return    : 96.4\n",
+      "cagr            : 24.6\n",
+      "mdd             : 65.61\n",
+      "total_return_w_fee : 125.72\n",
+      "cagr_w_fee      : 30.38\n",
+      "mdd_w_fee       : 66.38\n",
+      "investing_days  : 1120\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.5_120cut_highest5%\n",
+      "total_return    : 128.65\n",
+      "cagr            : 31.38\n",
+      "mdd             : 53.35\n",
+      "total_return_w_fee : 146.49\n",
+      "cagr_w_fee      : 34.68\n",
+      "mdd_w_fee       : 50.79\n",
+      "investing_days  : 1106\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.5_200cut_highest5%\n",
+      "total_return    : 87.38\n",
+      "cagr            : 24.76\n",
+      "mdd             : 42.58\n",
+      "total_return_w_fee : 106.75\n",
+      "cagr_w_fee      : 29.16\n",
+      "mdd_w_fee       : 37.09\n",
+      "investing_days  : 1036\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.7_5cut_highest5%\n",
+      "total_return    : 64.36\n",
+      "cagr            : 15.89\n",
+      "mdd             : 72.61\n",
+      "total_return_w_fee : 58.76\n",
+      "cagr_w_fee      : 14.7\n",
+      "mdd_w_fee       : 73.49\n",
+      "investing_days  : 1230\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.7_10cut_highest5%\n",
+      "total_return    : 60.22\n",
+      "cagr            : 15.05\n",
+      "mdd             : 71.5\n",
+      "total_return_w_fee : 60.67\n",
+      "cagr_w_fee      : 15.15\n",
+      "mdd_w_fee       : 72.67\n",
+      "investing_days  : 1227\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.7_20cut_highest5%\n",
+      "total_return    : 57.11\n",
+      "cagr            : 14.72\n",
+      "mdd             : 71.93\n",
+      "total_return_w_fee : 66.4\n",
+      "cagr_w_fee      : 16.74\n",
+      "mdd_w_fee       : 72.85\n",
+      "investing_days  : 1201\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.7_50cut_highest5%\n",
+      "total_return    : 136.12\n",
+      "cagr            : 32.31\n",
+      "mdd             : 58.66\n",
+      "total_return_w_fee : 174.88\n",
+      "cagr_w_fee      : 39.03\n",
+      "mdd_w_fee       : 58.55\n",
+      "investing_days  : 1120\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.7_120cut_highest5%\n",
+      "total_return    : 148.71\n",
+      "cagr            : 35.08\n",
+      "mdd             : 49.26\n",
+      "total_return_w_fee : 166.72\n",
+      "cagr_w_fee      : 38.23\n",
+      "mdd_w_fee       : 46.38\n",
+      "investing_days  : 1106\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.7_200cut_highest5%\n",
+      "total_return    : 76.45\n",
+      "cagr            : 22.15\n",
+      "mdd             : 45.8\n",
+      "total_return_w_fee : 89.04\n",
+      "cagr_w_fee      : 25.15\n",
+      "mdd_w_fee       : 42.3\n",
+      "investing_days  : 1036\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.9_5cut_highest5%\n",
+      "total_return    : 75.41\n",
+      "cagr            : 18.19\n",
+      "mdd             : 70.05\n",
+      "total_return_w_fee : 73.37\n",
+      "cagr_w_fee      : 17.78\n",
+      "mdd_w_fee       : 71.41\n",
+      "investing_days  : 1227\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.9_10cut_highest5%\n",
+      "total_return    : 73.54\n",
+      "cagr            : 17.82\n",
+      "mdd             : 69.13\n",
+      "total_return_w_fee : 64.58\n",
+      "cagr_w_fee      : 15.98\n",
+      "mdd_w_fee       : 70.73\n",
+      "investing_days  : 1227\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.9_20cut_highest5%\n",
+      "total_return    : 55.76\n",
+      "cagr            : 14.44\n",
+      "mdd             : 71.41\n",
+      "total_return_w_fee : 70.49\n",
+      "cagr_w_fee      : 17.63\n",
+      "mdd_w_fee       : 71.62\n",
+      "investing_days  : 1199\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.9_50cut_highest5%\n",
+      "total_return    : 135.64\n",
+      "cagr            : 32.22\n",
+      "mdd             : 58.74\n",
+      "total_return_w_fee : 169.82\n",
+      "cagr_w_fee      : 38.19\n",
+      "mdd_w_fee       : 58.82\n",
+      "investing_days  : 1120\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.9_120cut_highest5%\n",
+      "total_return    : 148.71\n",
+      "cagr            : 35.08\n",
+      "mdd             : 49.26\n",
+      "total_return_w_fee : 163.14\n",
+      "cagr_w_fee      : 37.62\n",
+      "mdd_w_fee       : 46.74\n",
+      "investing_days  : 1106\n",
+      "==============================\n",
+      "======Investment Summary======\n",
+      "Strategy        : Volatility Breakout_0.9_200cut_highest5%\n",
+      "total_return    : 78.48\n",
+      "cagr            : 22.64\n",
+      "mdd             : 45.17\n",
+      "total_return_w_fee : 84.9\n",
+      "cagr_w_fee      : 24.18\n",
+      "mdd_w_fee       : 43.38\n",
+      "investing_days  : 1036\n",
       "==============================\n"
      ]
     }
    ],
    "source": [
-    "ks = [k / 10.0 for k in range(1, 10)]\n",
+    "ks = [0.3, 0.5, 0.7, 0.9]\n",
     "mas = [5, 10, 20, 50, 120, 200]\n",
     "for k in ks:\n",
     "    for ma in mas:\n",
