--- a/strategies/vb/vb_not_daily.ipynb
+++ b/strategies/vb/vb_not_daily.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,14 +123,15 @@
     "    df.to_csv(f\"../../results/volatilitybreakout/volatility_breakout_cut_{k}.csv\")\n",
     "\n",
     "    # Get performance metrics and plot the results\n",
-    "    get_performance(df=df, title=f\"Volatility Breakout_cut_{k}\")\n",
+    "    excel_path = \"../../results/results.xlsx\"\n",
+    "    get_performance(df=df, title=f\"Volatility Breakout_{k}_cut_entry5%\", add_to_excel=True, file_path=excel_path)\n",
     "\n",
     "    df = original_df.copy()  # Create a fresh copy for each interval\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +139,7 @@
      "output_type": "stream",
      "text": [
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.1\n",
+      "Strategy        : Volatility Breakout_0.1_cut_entry5%\n",
       "total_return    : -4.17\n",
       "cagr            : -1.25\n",
       "mdd             : 78.16\n",
@@ -148,7 +149,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.2\n",
+      "Strategy        : Volatility Breakout_0.2_cut_entry5%\n",
       "total_return    : 89.02\n",
       "cagr            : 20.69\n",
       "mdd             : 68.5\n",
@@ -158,7 +159,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.3\n",
+      "Strategy        : Volatility Breakout_0.3_cut_entry5%\n",
       "total_return    : 36.38\n",
       "cagr            : 9.59\n",
       "mdd             : 70.06\n",
@@ -168,7 +169,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.4\n",
+      "Strategy        : Volatility Breakout_0.4_cut_entry5%\n",
       "total_return    : 38.39\n",
       "cagr            : 10.07\n",
       "mdd             : 68.79\n",
@@ -178,7 +179,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.5\n",
+      "Strategy        : Volatility Breakout_0.5_cut_entry5%\n",
       "total_return    : 35.36\n",
       "cagr            : 9.35\n",
       "mdd             : 68.97\n",
@@ -188,7 +189,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.6\n",
+      "Strategy        : Volatility Breakout_0.6_cut_entry5%\n",
       "total_return    : 64.72\n",
       "cagr            : 15.88\n",
       "mdd             : 67.77\n",
@@ -198,7 +199,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.7\n",
+      "Strategy        : Volatility Breakout_0.7_cut_entry5%\n",
       "total_return    : 69.82\n",
       "cagr            : 16.93\n",
       "mdd             : 69.56\n",
@@ -208,7 +209,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.8\n",
+      "Strategy        : Volatility Breakout_0.8_cut_entry5%\n",
       "total_return    : 77.08\n",
       "cagr            : 18.38\n",
       "mdd             : 70.25\n",
@@ -218,7 +219,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_0.9\n",
+      "Strategy        : Volatility Breakout_0.9_cut_entry5%\n",
       "total_return    : 60.4\n",
       "cagr            : 14.97\n",
       "mdd             : 70.7\n",
