--- a/strategies/vb/vb_not_daily_highest.ipynb
+++ b/strategies/vb/vb_not_daily_highest.ipynb
@@ -124,7 +124,8 @@
     "    df.to_csv(f\"../../results/volatilitybreakout/volatility_breakout_cut_high_{k}.csv\")\n",
     "\n",
     "    # Get performance metrics and plot the results\n",
-    "    get_performance(df=df, title=f\"Volatility Breakout_cut_high_{k}\")\n",
+    "    excel_path = \"../../results/results.xlsx\"\n",
+    "    get_performance(df=df, title=f\"Volatility Breakout_{k}_cut_highest5%\", add_to_excel=True, file_path=excel_path)\n",
     "\n",
     "    df = original_df.copy()  # Create a fresh copy for each interval\n"
    ]
@@ -139,7 +140,7 @@
      "output_type": "stream",
      "text": [
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_high_0.1\n",
+      "Strategy        : Volatility Breakout_0.1_cut_highest5%\n",
       "total_return    : 79.02\n",
       "cagr            : 18.76\n",
       "mdd             : 66.01\n",
@@ -149,7 +150,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_high_0.2\n",
+      "Strategy        : Volatility Breakout_0.2_cut_highest5%\n",
       "total_return    : 51.95\n",
       "cagr            : 13.15\n",
       "mdd             : 66.17\n",
@@ -159,7 +160,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_high_0.3\n",
+      "Strategy        : Volatility Breakout_0.3_cut_highest5%\n",
       "total_return    : 56.04\n",
       "cagr            : 14.04\n",
       "mdd             : 57.84\n",
@@ -169,7 +170,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_high_0.4\n",
+      "Strategy        : Volatility Breakout_0.4_cut_highest5%\n",
       "total_return    : 59.12\n",
       "cagr            : 14.7\n",
       "mdd             : 57.24\n",
@@ -179,7 +180,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_high_0.5\n",
+      "Strategy        : Volatility Breakout_0.5_cut_highest5%\n",
       "total_return    : 101.97\n",
       "cagr            : 23.07\n",
       "mdd             : 55.94\n",
@@ -189,7 +190,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_high_0.6\n",
+      "Strategy        : Volatility Breakout_0.6_cut_highest5%\n",
       "total_return    : 182.81\n",
       "cagr            : 35.93\n",
       "mdd             : 50.48\n",
@@ -199,7 +200,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_high_0.7\n",
+      "Strategy        : Volatility Breakout_0.7_cut_highest5%\n",
       "total_return    : 173.07\n",
       "cagr            : 34.53\n",
       "mdd             : 52.68\n",
@@ -209,7 +210,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_high_0.8\n",
+      "Strategy        : Volatility Breakout_0.8_cut_highest5%\n",
       "total_return    : 251.3\n",
       "cagr            : 44.92\n",
       "mdd             : 46.65\n",
@@ -219,7 +220,7 @@
       "investing_days  : 1236\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : Volatility Breakout_cut_high_0.9\n",
+      "Strategy        : Volatility Breakout_0.9_cut_highest5%\n",
       "total_return    : 187.35\n",
       "cagr            : 36.58\n",
       "mdd             : 43.94\n",
