--- a/strategies/ma/sma_crossover.ipynb
+++ b/strategies/ma/sma_crossover.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,13 @@
     "\n",
     "\n",
     "\n",
-    "df = pd.read_csv(os.path.join(os.getcwd(), \"../../data/total_4am.csv\"), index_col=0)\n"
+    "df = pd.read_csv(os.path.join(os.getcwd(), \"../../data/total_4am.csv\"), index_col=0)\n",
+    "excel_path = \"../../results/results.xlsx\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,10 +46,10 @@
     "                for i in range(200, len(df)):\n",
     "                    # Buy condition\n",
     "                    # if df['close'].iloc[i] >= df[f'{interval}_ma'].iloc[i]:\n",
-    "                    if df[f'{interval}_ma'].iloc[i] >= df[f'{interval2}_ma'].iloc[i]:\n",
+    "                    if df.loc[i, f'{interval}_ma'] >= df.loc[i, f'{interval2}_ma'] and df.loc[i-1, f'{interval}_ma'] < df.loc[i-1, f'{interval2}_ma']:\n",
     "                        df.loc[i, 'signal'] = 1\n",
     "                    # Sell condition\n",
-    "                    elif df[f'{interval}_ma'].iloc[i] < df[f'{interval2}_ma'].iloc[i]:\n",
+    "                    elif df.loc[i, f'{interval}_ma'] < df.loc[i, f'{interval2}_ma'] and df.loc[i-1, f'{interval}_ma'] >= df.loc[i-1, f'{interval2}_ma']:\n",
     "                        df.loc[i, 'signal'] = -1\n",
     "\n",
     "                # Manage positions\n",
@@ -56,10 +57,10 @@
     "                holding_position = False\n",
     "\n",
     "                for i in range(1, len(df)):\n",
-    "                    if df['signal'].iloc[i] == 1 and not holding_position:\n",
+    "                    if df.loc[i, 'signal'] == 1 and not holding_position:\n",
     "                        df.loc[i, 'position'] = 1\n",
     "                        holding_position = True\n",
-    "                    elif df['signal'].iloc[i] == -1 and holding_position:\n",
+    "                    elif df.loc[i, 'signal'] == -1 and holding_position:\n",
     "                        df.loc[i, 'position'] = 0\n",
     "                        holding_position = False\n",
     "                    else:\n",
@@ -68,8 +69,29 @@
     "                # Calculate the strategy returns (only when in a long position)\n",
     "                df['strategy_returns'] = df['position'].shift(1) * df['close'].pct_change()\n",
     "\n",
-    "                # Calculate the cumulative returns\n",
+    "                df['strategy_returns2'] = df['strategy_returns']\n",
+    "                \n",
+    "                for i in range(1, len(df)):\n",
+    "                    buy_price = df.loc[i-1, \"close\"]\n",
+    "                    buy_price_copy = buy_price\n",
+    "                    sell_price = df.loc[i, \"close\"]\n",
+    "                    sell_price_copy = sell_price\n",
+    "                    if df.loc[i-1, 'position'] == 1 and df.loc[i-1, 'signal'] == 1:\n",
+    "                        # df.loc[i, 'strategy_returns2'] = (df.loc[i,'position'])/(df.loc[i-1, 'position'] * 1.002) -1\n",
+    "                        buy_price = df.loc[i-1, \"close\"] * 1.002\n",
+    "                    if df.loc[i, 'position'] == 0 and df.loc[i-1, 'position'] != 0:\n",
+    "                        # df.loc[i, 'strategy_returns2'] = (df.loc[i,'position'] * 0.998)/(df.loc[i-1, 'position']) -1\n",
+    "                        sell_price = df.loc[i, \"close\"] * 0.998\n",
+    "                    \n",
+    "                    if buy_price == buy_price_copy and sell_price == sell_price_copy:\n",
+    "                        continue\n",
+    "\n",
+    "\n",
+    "                    df.loc[i, \"strategy_returns2\"] = sell_price/buy_price - 1\n",
+    "\n",
     "                df['cumulative_returns'] = (1 + df['strategy_returns']).cumprod()\n",
+    "\n",
+    "                df[\"cumulative_returns2\"] = (1 + df['strategy_returns2']).cumprod()\n",
     "\n",
     "                # Calculate the benchmark cumulative returns (buy and hold strategy)\n",
     "                df['benchmark_returns'] = (1 + df['close'].pct_change()).cumprod()\n",
@@ -78,7 +100,8 @@
     "                df.to_csv(f\"../../results/ma/ma_crossover({interval})_({interval2}).csv\")\n",
     "\n",
     "                # Get performance metrics and plot the results\n",
-    "                get_performance(df=df, title=f\"ma_crossover({interval})_({interval2})\")\n",
+    "                excel_path = \"../../results/results.xlsx\"\n",
+    "                get_performance(df=df, title=f\"ma_crossover({interval})_({interval2})\", add_to_excel=True, file_path=excel_path)\n",
     "\n",
     "                \n",
     "            df = original_df.copy()  # Create a fresh copy for each interval\n"
@@ -86,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,149 +118,212 @@
      "text": [
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(5)_(10)\n",
-      "total_return    : 56.35\n",
-      "cagr            : 17.04\n",
+      "total_return    : 53.55\n",
+      "cagr            : 16.62\n",
       "mdd             : 51.57\n",
-      "investing_days  : 1037\n",
+      "total_return_w_fee : 23.23\n",
+      "cagr_w_fee      : 7.78\n",
+      "mdd_w_fee       : 56.18\n",
+      "investing_days  : 1018\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(5)_(20)\n",
-      "total_return    : 40.94\n",
-      "cagr            : 12.84\n",
-      "mdd             : 54.17\n",
-      "investing_days  : 1037\n",
+      "total_return    : 44.14\n",
+      "cagr            : 14.05\n",
+      "mdd             : 50.59\n",
+      "total_return_w_fee : 28.35\n",
+      "cagr_w_fee      : 9.39\n",
+      "mdd_w_fee       : 52.91\n",
+      "investing_days  : 1015\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(5)_(50)\n",
-      "total_return    : 50.32\n",
-      "cagr            : 15.43\n",
-      "mdd             : 45.21\n",
-      "investing_days  : 1037\n",
+      "total_return    : 53.27\n",
+      "cagr            : 18.42\n",
+      "mdd             : 41.23\n",
+      "total_return_w_fee : 44.34\n",
+      "cagr_w_fee      : 15.64\n",
+      "mdd_w_fee       : 42.74\n",
+      "investing_days  : 922\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(5)_(90)\n",
-      "total_return    : 21.54\n",
-      "cagr            : 7.11\n",
-      "mdd             : 51.08\n",
-      "investing_days  : 1037\n",
+      "total_return    : 48.09\n",
+      "cagr            : 17.69\n",
+      "mdd             : 42.18\n",
+      "total_return_w_fee : 41.15\n",
+      "cagr_w_fee      : 15.37\n",
+      "mdd_w_fee       : 42.98\n",
+      "investing_days  : 880\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(5)_(120)\n",
-      "total_return    : 65.96\n",
-      "cagr            : 19.52\n",
-      "mdd             : 42.36\n",
-      "investing_days  : 1037\n",
+      "total_return    : 96.6\n",
+      "cagr            : 32.58\n",
+      "mdd             : 26.07\n",
+      "total_return_w_fee : 91.17\n",
+      "cagr_w_fee      : 31.04\n",
+      "mdd_w_fee       : 26.81\n",
+      "investing_days  : 875\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(5)_(200)\n",
-      "total_return    : 58.69\n",
-      "cagr            : 17.65\n",
-      "mdd             : 35.28\n",
-      "investing_days  : 1037\n",
+      "total_return    : 110.48\n",
+      "cagr            : 60.25\n",
+      "mdd             : 34.06\n",
+      "total_return_w_fee : 107.14\n",
+      "cagr_w_fee      : 58.64\n",
+      "mdd_w_fee       : 34.45\n",
+      "investing_days  : 576\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(10)_(20)\n",
-      "total_return    : 7.21\n",
-      "cagr            : 2.48\n",
-      "mdd             : 60.39\n",
-      "investing_days  : 1037\n",
+      "total_return    : 11.97\n",
+      "cagr            : 4.15\n",
+      "mdd             : 56.11\n",
+      "total_return_w_fee : 0.91\n",
+      "cagr_w_fee      : 0.33\n",
+      "mdd_w_fee       : 57.83\n",
+      "investing_days  : 1014\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(10)_(50)\n",
-      "total_return    : 23.65\n",
-      "cagr            : 7.76\n",
-      "mdd             : 43.91\n",
-      "investing_days  : 1037\n",
+      "total_return    : 30.73\n",
+      "cagr            : 11.24\n",
+      "mdd             : 37.83\n",
+      "total_return_w_fee : 23.61\n",
+      "cagr_w_fee      : 8.79\n",
+      "mdd_w_fee       : 40.27\n",
+      "investing_days  : 918\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(10)_(90)\n",
-      "total_return    : 34.86\n",
-      "cagr            : 11.1\n",
-      "mdd             : 45.22\n",
-      "investing_days  : 1037\n",
+      "total_return    : 59.76\n",
+      "cagr            : 21.5\n",
+      "mdd             : 33.91\n",
+      "total_return_w_fee : 54.73\n",
+      "cagr_w_fee      : 19.9\n",
+      "mdd_w_fee       : 34.7\n",
+      "investing_days  : 878\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(10)_(120)\n",
-      "total_return    : 30.8\n",
-      "cagr            : 9.91\n",
-      "mdd             : 45.77\n",
-      "investing_days  : 1037\n",
+      "total_return    : 63.63\n",
+      "cagr            : 22.83\n",
+      "mdd             : 26.55\n",
+      "total_return_w_fee : 59.75\n",
+      "cagr_w_fee      : 21.61\n",
+      "mdd_w_fee       : 27.13\n",
+      "investing_days  : 874\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(10)_(200)\n",
-      "total_return    : 64.5\n",
-      "cagr            : 19.15\n",
-      "mdd             : 35.09\n",
-      "investing_days  : 1037\n",
+      "total_return    : 119.93\n",
+      "cagr            : 65.06\n",
+      "mdd             : 33.53\n",
+      "total_return_w_fee : 116.44\n",
+      "cagr_w_fee      : 63.39\n",
+      "mdd_w_fee       : 33.8\n",
+      "investing_days  : 574\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(20)_(50)\n",
-      "total_return    : 36.83\n",
-      "cagr            : 11.67\n",
-      "mdd             : 44.89\n",
-      "investing_days  : 1037\n",
+      "total_return    : 40.51\n",
+      "cagr            : 14.58\n",
+      "mdd             : 43.69\n",
+      "total_return_w_fee : 33.92\n",
+      "cagr_w_fee      : 12.4\n",
+      "mdd_w_fee       : 45.02\n",
+      "investing_days  : 912\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(20)_(90)\n",
-      "total_return    : 6.59\n",
-      "cagr            : 2.27\n",
-      "mdd             : 53.4\n",
-      "investing_days  : 1037\n",
+      "total_return    : 31.88\n",
+      "cagr            : 12.22\n",
+      "mdd             : 41.27\n",
+      "total_return_w_fee : 27.73\n",
+      "cagr_w_fee      : 10.74\n",
+      "mdd_w_fee       : 41.97\n",
+      "investing_days  : 876\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(20)_(120)\n",
-      "total_return    : 35.29\n",
-      "cagr            : 11.22\n",
-      "mdd             : 38.97\n",
-      "investing_days  : 1037\n",
+      "total_return    : 71.18\n",
+      "cagr            : 25.3\n",
+      "mdd             : 27.42\n",
+      "total_return_w_fee : 67.79\n",
+      "cagr_w_fee      : 24.25\n",
+      "mdd_w_fee       : 27.86\n",
+      "investing_days  : 870\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(20)_(200)\n",
-      "total_return    : 71.99\n",
-      "cagr            : 21.03\n",
-      "mdd             : 42.85\n",
-      "investing_days  : 1037\n",
+      "total_return    : 152.06\n",
+      "cagr            : 81.14\n",
+      "mdd             : 26.56\n",
+      "total_return_w_fee : 150.05\n",
+      "cagr_w_fee      : 80.21\n",
+      "mdd_w_fee       : 26.56\n",
+      "investing_days  : 568\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(50)_(90)\n",
-      "total_return    : 21.96\n",
-      "cagr            : 7.24\n",
-      "mdd             : 50.83\n",
-      "investing_days  : 1037\n",
+      "total_return    : 46.19\n",
+      "cagr            : 17.21\n",
+      "mdd             : 36.55\n",
+      "total_return_w_fee : 42.72\n",
+      "cagr_w_fee      : 16.04\n",
+      "mdd_w_fee       : 37.05\n",
+      "investing_days  : 873\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(50)_(120)\n",
-      "total_return    : 42.52\n",
-      "cagr            : 13.28\n",
-      "mdd             : 49.88\n",
-      "investing_days  : 1037\n",
+      "total_return    : 84.97\n",
+      "cagr            : 30.07\n",
+      "mdd             : 30.74\n",
+      "total_return_w_fee : 82.77\n",
+      "cagr_w_fee      : 29.4\n",
+      "mdd_w_fee       : 31.02\n",
+      "investing_days  : 854\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(50)_(200)\n",
-      "total_return    : 40.76\n",
-      "cagr            : 12.79\n",
-      "mdd             : 47.69\n",
-      "investing_days  : 1037\n",
+      "total_return    : 109.67\n",
+      "cagr            : 63.74\n",
+      "mdd             : 26.56\n",
+      "total_return_w_fee : 108.0\n",
+      "cagr_w_fee      : 62.87\n",
+      "mdd_w_fee       : 26.56\n",
+      "investing_days  : 548\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(90)_(120)\n",
-      "total_return    : 1.19\n",
-      "cagr            : 0.42\n",
-      "mdd             : 60.51\n",
-      "investing_days  : 1037\n",
+      "total_return    : 62.17\n",
+      "cagr            : 23.29\n",
+      "mdd             : 32.77\n",
+      "total_return_w_fee : 58.32\n",
+      "cagr_w_fee      : 22.01\n",
+      "mdd_w_fee       : 33.31\n",
+      "investing_days  : 843\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(90)_(200)\n",
-      "total_return    : 75.21\n",
-      "cagr            : 21.82\n",
-      "mdd             : 47.41\n",
-      "investing_days  : 1037\n",
+      "total_return    : 144.64\n",
+      "cagr            : 85.82\n",
+      "mdd             : 26.56\n",
+      "total_return_w_fee : 143.18\n",
+      "cagr_w_fee      : 85.05\n",
+      "mdd_w_fee       : 26.56\n",
+      "investing_days  : 527\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_crossover(120)_(200)\n",
       "total_return    : 41.39\n",
       "cagr            : 13.11\n",
       "mdd             : 50.53\n",
+      "total_return_w_fee : 39.98\n",
+      "cagr_w_fee      : 12.71\n",
+      "mdd_w_fee       : 50.72\n",
       "investing_days  : 1026\n",
       "==============================\n"
      ]
