--- a/strategies/vb/vb_basic.ipynb
+++ b/strategies/vb/vb_basic.ipynb
@@ -61,7 +61,8 @@
     "    df.to_csv(f\"../../results/volatilitybreakout/volatility_breakout_basic_{k}.csv\")\n",
     "\n",
     "    # Get performance metrics and plot the results\n",
-    "    get_performance(df=df, title=f\"Volatility Breakout_{k}\")\n",
+    "    excel_path = \"../../results/results.xlsx\"\n",
+    "    get_performance(df=df, title=f\"Volatility Breakout_{k}\", add_to_excel=True, file_path=excel_path)\n",
     "\n",
     "    df = original_df.copy()  # Create a fresh copy for each interval\n"
    ]
